# wine-mlflow-tutorial

./: LICENSE  README.md  pyproject.toml
wine_mlflow_tutorial/: train.py
