[tool.poetry]
name = "wine-mlflow-tutorial"
version = "0.1.0"
description = "Train a machine learning model to predict wine quality"
authors = ["Eric Dasse <christ.gououi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.11.3"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
